- Code Smells: Medium